# ids-ml

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  predict.py  projeto_cicids2017_ml.md  pyproject.toml  train.py
reports/: relatorio_final.md  train_log.txt
src/api/: app.py  model_loader.py  schemas.py
src/data/: loader.py
src/evaluation/: metrics.py
src/features/: resampling.py  selection.py
src/models/: ensemble.py  tuning.py
tests/test_api/: test_schemas.py
tests/test_data/: test_loader.py
tests/test_features/: test_resampling.py  test_selection.py
tests/test_models/: test_ensemble.py
